修改文件: 自2019年5月22日之后的python配置.md

--- a/自2019年5月22日之后的python配置.md
+++ b/自2019年5月22日之后的python配置.md
@@ -42,5 +42,14 @@ pip install opencv-python
 ```
 在windows下配置opencv3+vs2019环境
 ## 配置pytorch:
-失败.暂时没有解决方式
+失败.暂时没有解决方式,因此准备尝试windows10下的Linux子系统,因而记录如下.
+### 环境
+windows10专业版
+### 配置过程
+去应用商店下载Ubuntu,打开,报错如下:
+![enter description here](./images/1558527158344.png)
+上网查询,可以得到下面[链接](https://blog.csdn.net/AI_Fanatic/article/details/82185437).
+解决方案:
 
+控制面板->程序与功能->启用或关闭windows功能->打开子系统.
+![enter description here](./images/1558527416899.png)
