修改文件: 当前国内局势分析和判断.md

--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -18,7 +18,9 @@ grammar_cjkRuby: true
 国内的资产阶级是不够成熟的，这种不成熟显现在两个方面：1）在对无产阶级的管理上，缺乏高效的方略；2）在剥削的方式上，过于明显。譬如说：明明无产阶级劳作者通过两个小时就可以完成的任务，由于管理者对管理的不理解，活生生拖了十个小时，还美其名曰“奋斗”，这岂不是乱弹琴！这种问题该如何解决呢？答：交给市场。再譬如说：从过去简单的工资制，到股票分红，再到更高端的措施，这些就是无产者和资本家共同的进步。甚至可能是最终达到共产的一条中间通路。那么，这种发展要怎么实现呢？答：交给市场。
 国内的无产阶级也是不够成熟的，这种不够成熟表现在两个方面：1）对自己被剥削的本质不理解，看待公司的方式有偏移。由于新晋的无产者主力多来自学校，学校一贯的舍小家为大家的集体主义思想还留在他们脑中，而经过公司内资本家的洗脑，便容易产生主动接受剥削的意念。“通过公司将个人连接成为一个模块”，这种想法有其合理之处，但是漏洞在于：无论是国家还是学校这种集体，管理机器产生本质上是为集体里的每个个人服务，但是，公司却是在为资本服务，或者说：在为资本家服务。利用学校宣传的“热爱劳动、热爱奉献”的说法，让无产阶级一味奉献，却又要求他们不能索取回报，哪有这种厚颜的人！2）争取权益的方式还不成熟。前段时间的996运动，明显存在以下特点：发起者保持着很大的克制和理性，跟随者同，但是却过于温和，大多数人仅仅是赞同且跟风，还没有付出切实有用的行动。这场运动的结果很有意思：无产者们遵从老板的命令在自家的浏览器里屏蔽了996.icu的网站。996行动就此结束。
 很多人对未来的无产阶级运动表示悲观，他们发现资产阶级控制了舆论、拥有各种先进的科技手段和工具，甚至开始垄断各种新兴的基础设施，无产阶级对此无能为力。这种悲观其实大可不必：资产阶级控制了舆论，但是舆论的组织、撰写、宣传算法都是无产阶级在执行；资产阶级拥有各种先进的科学手段，但是这些科学手段的研发人员同样是受雇佣的无产者，资产阶级有各种先进工具，诸如QQ（笑），但是这些工具的研发、改进都是无产阶级劳作的产物。很多人认为成果来自于资本，实质却是：资本仅仅是组织的作用，所有的物质精神成果都是人类在自然资源的基础上一手创造的。因而只要无产阶级被有效、合理的组织，无产阶级就可以获得和资产阶级抗衡的力量。而一直以来存在的技俩是，资产阶级将会一直尝试分化无产阶级阵营，因而受压迫最深的无产者才是最坚定的无产阶级革命家。
-这个时期维持时间会有多久，完全取决于是否会出现新的一波建设和发展的狂潮。这种狂潮不是人为随随便便形成的，而是在社会的基础上结合社会发展的天时和自然资源的地利的基础上的合理政策的人和。关键，还是要靠人。除此之外，中国并不是一个孤立的存在，中国身处在世界之中，由于世界的动荡，中国也会泛起涟漪。下面的贸易战就是这样一个东西。
+同时，这也对中国共产党的新一步执政提出了要求。如果共产党还是共产党，那么在无产阶级和资产阶级发生矛盾的时候，你到底是去帮无产阶级，还是去帮资产阶级？资本家违反了《劳动法》，那么资本家受到法律惩罚了吗？并没有。这里就是现在共产党执政的难处。如果去帮助无产阶级，那么确实是名副其实的“共产党”，确实是代表了最广大人民的根本利益，但是却可能会出现执政不稳的情形。毕竟资源、眼界、势力上都是资产阶级占据主动。如果去帮助资产阶级，那么共产党一词将会成为一个笑话，耄当年所提到的“修正主义”就是此物了。目前看来，情形正在向第二种现象过渡。当然，也可能会出现下面一种“骑墙” 的行为——两边都帮。两边都帮就意味着：两边都不帮。这些不同的声音很可能会在将来出现在党内，有志者需要提前思考解决措施。如果有更多的资本家进入党内，那么党的政策就会向资产阶级倾斜，那么无产者的血汗将会被进一步出卖，甚至于他们不为所知。这是极其危险的。关键是：这样短期内会代表先进科学、先进生产力，长期来看肯定会过犹不及了。未来三十年，即从2020年到2050年，国内的事情远比国外的事情棘手。
+当然，这个时期具体的维持时间会有多久，完全取决于是否会出现新的一波建设和发展的狂潮。这种狂潮不是人为随随便便形成的，而是在社会的基础上结合社会发展的天时和自然资源的地利的基础上的合理政策的人和。关键，还是要靠人。
+除此之外，中国并不是一个孤立的存在，中国身处在世界之中，世界风波激荡，中国无法做到置之不理，这就是外部的扰动。下面的贸易战，就是基于此时的讨论。
 
 
 
