修改文件: 当前国内局势分析和判断.md

--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -21,8 +21,7 @@ grammar_cjkRuby: true
 同时，这也对中国共产党的新一步执政提出了要求。如果共产党还是共产党，那么在无产阶级和资产阶级发生矛盾的时候，你到底是去帮无产阶级，还是去帮资产阶级？资本家违反了《劳动法》，那么资本家受到法律惩罚了吗？并没有。这里就是现在共产党执政的难处。如果去帮助无产阶级，那么确实是名副其实的“共产党”，确实是代表了最广大人民的根本利益，但是却可能会出现执政不稳的情形。毕竟资源、眼界、势力上都是资产阶级占据主动。如果去帮助资产阶级，那么共产党一词将会成为一个笑话，耄当年所提到的“修正主义”就是此物了。目前看来，情形正在向第二种现象过渡。当然，也可能会出现下面一种“骑墙” 的行为——两边都帮。两边都帮就意味着：两边都不帮。这些不同的声音很可能会在将来出现在党内，有志者需要提前思考解决措施。如果有更多的资本家进入党内，那么党的政策就会向资产阶级倾斜，那么无产者的血汗将会被进一步出卖，甚至于他们不为所知。这是极其危险的。关键是：这样短期内会代表先进科学、先进生产力，长期来看肯定会过犹不及了。未来三十年，即从2020年到2050年，国内的事情远比国外的事情棘手。
 当然，这个时期具体的维持时间会有多久，完全取决于是否会出现新的一波建设和发展的狂潮。这种狂潮不是人为随随便便形成的，而是在社会的基础上结合社会发展的天时和自然资源的地利的基础上的合理政策的人和。关键，还是要靠人。
 除此之外，中国并不是一个孤立的存在，中国身处在世界之中，世界风波激荡，中国无法做到置之不理，这就是外部的扰动。下面的贸易战，就是基于此时的讨论。
-
-
+# 贸易战转移了当前社会舆论的主要目光，缓解了社会主要矛盾
 
 
 
