修改文件: 当前国内局势分析和判断.md

--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -33,9 +33,4 @@ grammar_cjkRuby: true
 除此之外，中国并不是一个孤立的存在，中国身处在世界之中，世界风波激荡，中国无法做到置之不理，这就是外部的扰动。下面的贸易战，就是基于此时的讨论。
 
 # 贸易战转移了当前社会舆论的主要目光，缓解了社会主要矛盾
-未完，待续
-
-
-
-中国形势艰难，但好于任何历史危机时期。
-
+有关贸易战的分析文章特别多，此处不再拾人牙慧，将贸易战之起源、 经过赘述。相信关心此事者这些经过自当挂念，而不关心者此文也必不会读了。贸易战的出现打破了国内简单的阶级分化问题，将民族问题再次引入到考虑范围中。在我的印象中，马克思理论是不关注民族主义的、全世界的无产阶级联合（之所以加“在我的印象中”，是因为这句话未必正确，读者读到此句时应持怀疑态度），但是民族却是无法进行回避的问题。马克思理论把国家视为“阶级矛盾不可调和的产物”，这自然有其合理之处——封建地主阶级统治农民的工具，资产阶级统治无产阶级的工具，自我批评改进的特色阶级统治无产阶级和资产阶级的工具。但是，这仅仅是在从阶级的角度思考这一机器。既然英国、美国、法国、德国都是相同性质的国家，为什么他们没有融合？这里有一个理由：民族性在作怪。当然，也有一个更“软”的称谓：文化与文明。从不同特性的身体开始一直到不同价值观的文化和文明，这就是民族性在国家问题上产生的
