修改文件: 当前国内局势分析和判断.md

--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -33,4 +33,13 @@ grammar_cjkRuby: true
 除此之外，中国并不是一个孤立的存在，中国身处在世界之中，世界风波激荡，中国无法做到置之不理，这就是外部的扰动。下面的贸易战，就是基于此时的讨论。
 
 # 贸易战转移了当前社会舆论的主要目光，缓解了社会主要矛盾
-有关贸易战的分析文章特别多，此处不再拾人牙慧，将贸易战之起源、 经过赘述。相信关心此事者这些经过自当挂念，而不关心者此文也必不会读了。贸易战的出现打破了国内简单的阶级分化问题，将民族问题再次引入到考虑范围中。在我的印象中，马克思理论是不关注民族主义的、全世界的无产阶级联合（之所以加“在我的印象中”，是因为这句话未必正确，读者读到此句时应持怀疑态度），但是民族却是无法进行回避的问题。马克思理论把国家视为“阶级矛盾不可调和的产物”，这自然有其合理之处——封建地主阶级统治农民的工具，资产阶级统治无产阶级的工具，自我批评改进的特色阶级统治无产阶级和资产阶级的工具。但是，这仅仅是在从阶级的角度思考这一机器。既然英国、美国、法国、德国都是相同性质的国家，为什么他们没有融合？这里有一个理由：民族性在作怪。当然，也有一个更“软”的称谓：文化与文明。从不同特性的身体开始一直到不同价值观的文化和文明，这就是民族性在国家问题上产生的
+有关贸易战的分析文章特别多，此处便不再拾人牙慧，再将贸易战之起源经过赘述。相信关心此事者这些经过自当挂念，而不关心者此文也必不会读了。贸易战的出现打破了国内简单的阶级分化问题，将民族问题再次引入到考虑范围中。所以在讨论贸易战之前，需要谈论一下国家之间的关系。
+在我的印象中，马克思理论是不关注民族主义的、全世界的无产阶级联合（之所以加“在我的印象中”，是因为这句话未必正确，读者读到此句时应持怀疑态度），但是民族却是思索分析各个集团无法回避的问题。马克思理论把国家视为“阶级矛盾不可调和的产物”，这自然有其合理之处——封建地主阶级统治农民的工具，资产阶级统治无产阶级的工具，自我批评改进的特色阶级统治无产阶级和资产阶级的工具。但是，这仅仅是在从阶级的角度思考这一机器。既然英国、美国、法国、德国都是相同性质的国家，为什么他们没有融合？这里有一个理由：民族性在作怪。当然，也有一个更“软”的称谓：文化与文明。从具有不同特点的身体特征开始一直到不同价值观的文化和文明，这就是民族性在国家问题上产生的问题。这是一种生理上的“隔绝”。假使（仅仅是假使）中国的工人和俄国的、日本的、美国的都受到压迫，他们可能会联合起来唱起国际歌。但是，如果美国的资产阶级压迫中国的工人而使得美国当地的工人得利，或者说美国的执政者采取了某些措施使得中国的工人受到打击但是美国的无产阶级却可以得到利益，那么大家还会在一起唱国际歌吗？自然不会。这里面就显示出国家之间博弈的复杂性。国家之间的博弈是存在这种复杂性的：两个因为各种原因无法进行交融的势力（这里无法进行交融的原因可能是民族、意识形态、也可能是单纯的政治集团斗争）进行了决斗。然后，各个国家的人民只能在“不愿意打”和“维护本国”之间进行选择，在这种博弈中，是没有维护别人这条路的。
+贸易战的结果无非就是达到了双方都需要停止的窘迫境地。胜利的一方可以实现什么目的？打击对方的资产阶级，从而实现在关键领域的垄断。失败的一方呢？被垄断。所以，在这一阶段的斗争，根本上还是要争取“垄断权”。垄断一词被提及的频率越来越低，但是却是资产阶级竞争的归宿。什么是垄断？我能做到的技术你做不到，所以我可以生产你需要用到的商品，你只能从我这里获取，天底下没有第二家，这就是垄断。垄断代表着绝对的话语权，但是这种特点并不是完全做到的，常常会出现几个弱势的公司，这几个公司只能望第一之项背，却并非望尘莫及，这就是贸易战产生的标准环境。
+贸易战产生还需要的一个标准环境就是：全球化。国家之间是有国界的。如果国家之间彼此不能交流，那么每个国家将发展出各自的垄断资产阶级，但是由于全球化的思路，拥有强势能力的资产阶级将会击败其他国家的资产阶级实现对该领域整个世界的垄断。这里面有一个无法调和的矛盾：企业的特定国家属从和多个国家服务之间的矛盾。由于企业是处于特定国家的，所以该国家便可以通过这种垄断在被垄断的国家里施行话语权。此外，全球化实现了从其他国家剥削财富到特定国家的一个过程，因而会被强势的国家推崇。即：1）越是经济全球化，企业就越应该依附于他所处的国家；2）全球化下的公司斗争，从来就不是某个国家内部那样相对公平的斗争，而是在考察了两个企业背后国家国力的基础上进行的帝国主义斗争。面对弱小国家的强力企业，强大国家甚至可以采取非规则的帝国主义手段直接从管理层进行瓦解，比如典型的诺基亚手机市场。如果搞清楚了上面的问题，那么联想的窘境就可以看出来。联想是成功的，其成功在于：填补了制造业中的不可缺少的一个位置。这使得他拥有今天的市场和地位。但是同时他在垄断这一点上是失败的：他从来就没有做到真正的垄断，丢了联想，还可以梦想、理想、幻想。因而他的议价能力太差了。这些定位决定了他的格局，倒不是关键点。关键点在于：他没有认识清楚国家对于全球化中的企业的重要性。总部设在美国，却没能得到美国的企业认同，这本身就很危险了，如果丢点中国的企业认同，就会更危险。全球化的暖季这些问题倒还是小事，倘若寒冬一至，那么你到底是站在总部的这边呢还是站在民族主义认同的这边？这是其最困难的地方。
+从这里可以再插一句嘴，谈论一下“墙”的作用。墙的建立可能是为了阻止无法受控的网络政治问题，但是它却起到了更重要的作用：阻止了强势企业对弱势企业的垄断。如果没有墙，那么很可能就没有B、A、T。那么这种垄断带来的议价能力将是一个国家无法承受的。国内的资产阶级不思进取也罢，醉生梦死也罢，国家不会因此受到致命性的打击，这就是墙的意义。
+现在可以讨论贸易战了。身处于弱势地位的帝国要威胁到身处于强势地位的帝国的垄断地位，所以后者采用其在某些领域的垄断对前者进行了战争，这就是贸易战。不管是哪一个帝国，内部都有资产阶级和无产阶级；同样不管是哪一个帝国，内部的无产阶级都是会受压迫的。但是问题在于：如果弱势地位的帝国能够打破强势帝国在某些地区的垄断，那么前者的无产阶级和资产阶级都将获利，而后者的无产阶级和资产阶级都将失利。所以对于统治阶级和被统治阶级而言本质上是上下一心的。但是无产阶级总会在此时存在短时性：贸易战会短暂牺牲无产阶级、小资产者的利益，降低他们的生活水平，这会引起他们的反感。但是，这种斗争是不会止歇的，直到实现了最终的垄断。
+现在来看看到底发生了什么吧：996的潮水还没褪去，外部的敌人让国内最大的两大敌对阶级再一次放弃了斗争，开始共同对外了，这对于国家而言难道不是好事！贸易战成功让民众从996的目光转到两大帝国和帝国背后的资产阶级势力的交锋中，矛盾又一次潜在水下了。
+
+
+
