--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -39,7 +39,7 @@ grammar_cjkRuby: true
 贸易战产生还需要的一个标准环境就是：全球化。国家之间是有国界的。如果国家之间彼此不能交流，那么每个国家将发展出各自的垄断资产阶级，但是由于全球化的思路，拥有强势能力的资产阶级将会击败其他国家的资产阶级实现对该领域整个世界的垄断。这里面有一个无法调和的矛盾：企业的特定国家属从和多个国家服务之间的矛盾。由于企业是处于特定国家的，所以该国家便可以通过这种垄断在被垄断的国家里施行话语权。此外，全球化实现了从其他国家剥削财富到特定国家的一个过程，因而会被强势的国家推崇。即：1）越是经济全球化，企业就越应该依附于他所处的国家；2）全球化下的公司斗争，从来就不是某个国家内部那样相对公平的斗争，而是在考察了两个企业背后国家国力的基础上进行的帝国主义斗争。面对弱小国家的强力企业，强大国家甚至可以采取非规则的帝国主义手段直接从管理层进行瓦解，比如典型的诺基亚手机市场。如果搞清楚了上面的问题，那么联想的窘境就可以看出来。联想是成功的，其成功在于：填补了制造业中的不可缺少的一个位置。这使得他拥有今天的市场和地位。但是同时他在垄断这一点上是失败的：他从来就没有做到真正的垄断，丢了联想，还可以梦想、理想、幻想。因而他的议价能力太差了。这些定位决定了他的格局，倒不是关键点。关键点在于：他没有认识清楚国家对于全球化中的企业的重要性。总部设在美国，却没能得到美国的企业认同，这本身就很危险了，如果丢点中国的企业认同，就会更危险。全球化的暖季这些问题倒还是小事，倘若寒冬一至，那么你到底是站在总部的这边呢还是站在民族主义认同的这边？这是其最困难的地方。
 从这里可以再插一句嘴，谈论一下“墙”的作用。墙的建立可能是为了阻止无法受控的网络政治问题，但是它却起到了更重要的作用：阻止了强势企业对弱势企业的垄断。如果没有墙，那么很可能就没有B、A、T。那么这种垄断带来的议价能力将是一个国家无法承受的。国内的资产阶级不思进取也罢，醉生梦死也罢，国家不会因此受到致命性的打击，这就是墙的意义。
 现在可以讨论贸易战了。身处于弱势地位的帝国要威胁到身处于强势地位的帝国的垄断地位，所以后者采用其在某些领域的垄断对前者进行了战争，这就是贸易战。不管是哪一个帝国，内部都有资产阶级和无产阶级；同样不管是哪一个帝国，内部的无产阶级都是会受压迫的。但是问题在于：如果弱势地位的帝国能够打破强势帝国在某些地区的垄断，那么前者的无产阶级和资产阶级都将获利，而后者的无产阶级和资产阶级都将失利。所以对于统治阶级和被统治阶级而言本质上是上下一心的。但是无产阶级总会在此时存在短时性：贸易战会短暂牺牲无产阶级、小资产者的利益，降低他们的生活水平，这会引起他们的反感。但是，这种斗争是不会止歇的，直到实现了最终的垄断。
-现在来看看到底发生了什么吧：996的潮水还没褪去，外部的敌人让国内最大的两大敌对阶级再一次放弃了斗争，开始共同对外了，这对于国家而言难道不是好事！贸易战成功让民众从996的目光转到两大帝国和帝国背后的资产阶级势力的交锋中，矛盾又一次潜在水下了。
+现在来看看到底发生了什么吧：996的潮水还没褪去，外部的敌人让国内最大的两大敌对阶级再一次放弃了斗争，开始共同对外了，这对于国家而言难道不是好事！贸易战成功让民众从996的目光转到两大帝国和帝国背后的资产阶级势力的交锋中，矛盾又一次潜在水下了。昔日压迫工人最严峻、最不人道、被人民喷的最惨的企业一夜之间成为了民族的骄傲、国家的脊梁，没有人会觉得这很荒诞，因为只有这样，企业里的资本家和工人才可以实现罕见的双赢。
 
 
 
