修改文件: 当前国内局势分析和判断.md

--- a/当前国内局势分析和判断.md
+++ b/当前国内局势分析和判断.md
@@ -40,6 +40,8 @@ grammar_cjkRuby: true
 从这里可以再插一句嘴，谈论一下“墙”的作用。墙的建立可能是为了阻止无法受控的网络政治问题，但是它却起到了更重要的作用：阻止了强势企业对弱势企业的垄断。如果没有墙，那么很可能就没有B、A、T。那么这种垄断带来的议价能力将是一个国家无法承受的。国内的资产阶级不思进取也罢，醉生梦死也罢，国家不会因此受到致命性的打击，这就是墙的意义。
 现在可以讨论贸易战了。身处于弱势地位的帝国要威胁到身处于强势地位的帝国的垄断地位，所以后者采用其在某些领域的垄断对前者进行了战争，这就是贸易战。不管是哪一个帝国，内部都有资产阶级和无产阶级；同样不管是哪一个帝国，内部的无产阶级都是会受压迫的。但是问题在于：如果弱势地位的帝国能够打破强势帝国在某些地区的垄断，那么前者的无产阶级和资产阶级都将获利，而后者的无产阶级和资产阶级都将失利。所以对于统治阶级和被统治阶级而言本质上是上下一心的。但是无产阶级总会在此时存在短时性：贸易战会短暂牺牲无产阶级、小资产者的利益，降低他们的生活水平，这会引起他们的反感。但是，这种斗争是不会止歇的，直到实现了最终的垄断。
 现在来看看到底发生了什么吧：996的潮水还没褪去，外部的敌人让国内最大的两大敌对阶级再一次放弃了斗争，开始共同对外了，这对于国家而言难道不是好事！贸易战成功让民众从996的目光转到两大帝国和帝国背后的资产阶级势力的交锋中，矛盾又一次潜在水下了。昔日压迫工人最严峻、最不人道、被人民喷的最惨的企业一夜之间成为了民族的骄傲、国家的脊梁，没有人会觉得这很荒诞，因为只有这样，企业里的资本家和工人才可以实现罕见的双赢。
+但是，但是，但是。中国的崛起目前来看并没有任何强烈的信号，甚至没有信号。美国在很多方面都已经显现老态，但是却缺少最致命的一环。所以贸易战的攻守之势、结局如何有很大的主观性。下面是在各种客观情形基础上进行的结果预测
+# 中美博弈的结局——迷雾茫茫
 
 
 
