修改文件: 个人陈述.md

--- a/个人陈述.md
+++ b/个人陈述.md
@@ -28,33 +28,33 @@
 2．电子
 	1)	电路原理知识；
 	2)	基本模拟电子电路知识；
-	3）	基本数字电路知识；
-	4）	微机原理知识（闭卷答有一定困难）；
+	3)	基本数字电路知识；
+	4)	微机原理知识（闭卷答有一定困难）；
 3. 控制
-	1）	基本掌握经典自动控制知识（基于传函的控制框架，开环闭环，频域复域）；
-	2）	基本掌握现代控制理论基础（卡尔曼框架、包括lypunov稳定性在内的稳定性判别、能控能观测、状态反馈和观测器等）；
-	3）	过程控制系统（测量仪器，smith预估、前馈、反馈、串级、PID控制参数整定）；
-	4）	计算机控制系统（Z变换、常见控制律的离散、最小拍、大林算法以及现代离散控制）；
-	5）	电气传动控制（浅显掌握 直流电机、交流电机的控制系统设计，整流、逆变等等）；
-	6）	系统辨识和多传感器数据融合（浅显掌握离散被控对象的最小二乘辨识方法和基本扩展，浅显基于现代控制理论的无人机编队理论）；
-	7）	现代鲁棒控制（正在学习）；
+	1)	基本掌握经典自动控制知识（基于传函的控制框架，开环闭环，频域复域）；
+	2)	基本掌握现代控制理论基础（卡尔曼框架、包括lypunov稳定性在内的稳定性判别、能控能观测、状态反馈和观测器等）；
+	3)	过程控制系统（测量仪器，smith预估、前馈、反馈、串级、PID控制参数整定）；
+	4)	计算机控制系统（Z变换、常见控制律的离散、最小拍、大林算法以及现代离散控制）；
+	5)	电气传动控制（浅显掌握 直流电机、交流电机的控制系统设计，整流、逆变等等）；
+	6)	系统辨识和多传感器数据融合（浅显掌握离散被控对象的最小二乘辨识方法和基本扩展，浅显基于现代控制理论的无人机编队理论）；
+	7)	现代鲁棒控制（正在学习）；
 4．	计算机软件
-	1）	编程语言
+	1)	编程语言
 		a.	C：学习掌握C语言基本法和基本的CMAKE使用，用其进行过两个单片机开发；
 		b.	Python：掌握其使用，学习了numpy、matplotlib、pytorch、cv2等库的API，懂得pip和anaconda配置，除此之外，使用过（）等库；
 		c.	C++：学习过C++语法，不够熟练，用其写过单纯形法（矩阵操作来自于Eigen库）；
 		d.	Java：面向对象课程的示例语言，只写过作业（见：）；
 		e.	Matab：科学计算语言，使用较多。基本函数、控制相关函数、拟合工具箱、Simulink、GUI设计都有使用；
 		f.	C#：正在学；
-	2）	操作系统
+	2)	操作系统
 		a.	掌握Linux系统基本命令和基本软件使用，不懂得其系统结构和kernel，shell脚本不熟练；
 		b.	浅显掌握微型计算机系统的结构体系；
-	3）	计算机理论知识
+	3)	计算机理论知识
 		a.	数据结构：曾经自学，理解常见的数据结构类型和特点；
 		b.	算法：没来得及入排序算法的门，此处是空白；
 		c.	计算机网络：空白；
-5．	模式识别算法
-	1）	利用opencv的简单图像处理和像素处理（很多算法的原理为了解，只是调用而已）；
-	2）	决策树算法和剪枝策略；
-	3）	神经网络（BP过程、全连接、卷积、池化、非线性激活、损失函数定义和优化策略的学习，ResNet等典型结构的学习）；
-	4）	大创相关的一些较为冷门模式识别算法（提取特征的LOMO、度量学习的XQDA等等）；
+5．模式识别算法
+	1)	利用opencv的简单图像处理和像素处理（很多算法的原理为了解，只是调用而已）；
+	2)	决策树算法和剪枝策略；
+	3)	神经网络（BP过程、全连接、卷积、池化、非线性激活、损失函数定义和优化策略的学习，ResNet等典型结构的学习）；
+	4)	大创相关的一些较为冷门模式识别算法（提取特征的LOMO、度量学习的XQDA等等）；
