修改文件: 个人陈述.md

--- a/个人陈述.md
+++ b/个人陈述.md
@@ -1,7 +1,6 @@
-# 个人陈述
+## 个人陈述
 梁子，男，汉族，山东临沂人，1998年生。
 2016年赴沈阳市东北大学学习自动化专业，现为自动化郎世俊实验班2016届大三本科生。在校期间积极参加日常学习活动和社团活动，性格时而开朗时而忧郁。
-## 个人经历
 ### 参与项目经历
 大学生创新创业计划课题“**跨摄像机下的行人重识别与跟踪**”，国家级项目核心成员。于该项目中提出一种融合手工特征和深度特征的行人重识别算法，发表一篇论文在ICDIP，并用PyQt设计了相关的图像界面，一篇专利正在受理。
 ### 参与竞赛
@@ -58,3 +57,21 @@
 	2)	决策树算法和剪枝策略；
 	3)	神经网络（BP过程、全连接、卷积、池化、非线性激活、损失函数定义和优化策略的学习，ResNet等典型结构的学习）；
 	4)	大创相关的一些较为冷门模式识别算法（提取特征的LOMO、度量学习的XQDA等等）；
+## 希望将来的研究方向
+在写这一部分的时候，我依然十分迷茫。
+
+大概是大二，我在图书馆偶然看见维纳的《控制论》，当阅读维纳给这个小册子作的长长的序时，我似乎能瞥见二战时美国那些研究数学、机械、生物、神经等各个分支的博士在一起交流思想的影子，把不同的学科思想进行统一和借鉴，并在此基础上提出合适的需求，维纳那个时代的人做到了。他们提出了控制论和信息论，他们制造出数字电子计算机。维纳甚至提出了大量的断言和预测，并指出了现在很多成熟理论的发展苗头。那时我就暗暗下定决心，我也想当一个那样的人。
+
+后来，我开始学习控制理论，我接触到了一个严格工程化的东西。我发现，原来控制已经被实用化了，只有一部分人再在此基础上继续前进。我继续跟随那些人，我找不到旗帜。那是一年前，我大二下。我开始接触神经网络，在那之前，一二年，大火就已经开始燃烧了。那些日子我如饥似渴地天天阅读网上介绍这些东西的博客和教程，并拿着知乎上当时呼声渐高的pytorch做验证。
+
+一年的沉淀，当我周围的人都开始围绕它转时，我反而理性了。当我发现我学习的数值分析、控制理论等知识的深度都要大于一个BP算法还有各种各样层出不穷的优化策略时，我就更觉得不适。我觉得这条通往智能的路也未必可行，从CNN到ResNet到DenseNet，前者的直接间接连接我还能接受，越往后越来越多的拓扑微调让我感到好笑。我在想，反馈和反向传播本质上有区别吗？残差网络和状态空间输出的直接间接本质上有区别吗？静态系统向量和动力学系统向量本质上有分别吗？这个不断地修改参数、调节结构最后用数据拟合一大堆参数的方法真的是那个值得我花硕士、博士生活乃至一生去追求的东西吗？
+
+这导致我对维纳所言的“智能”越来越悲观，我害怕实现智能只能靠英伟达。这里不是说算力无用，而是我想看见新的理论、新的想法，我想借鉴别的领域的特点来找寻答案，就像之前信息论借鉴热力学的熵、控制论借鉴生物学的反馈一样。
+
+去年九月，我大三上学期，有幸听清华大学的戴琼海院士讲脑科学。这场讲座坚定了我的信念，我感觉真正的突破总归是要来了，我甚至要下定决心转去学生物，或者去做我不太喜欢的检测仪表。后来经过一个月的冷却，我又开始质疑：我觉得这条出路未必可行，且长路漫漫。智能可以借鉴人脑，但未必必须要雷同人脑。自然界没有转圈的腿，人类终究还是造出了汽车轮子，自然界没有喷气动力的飞机，没有螺旋翼，不代表就不能有飞机了。不同的思路是可以实现相同的功效的，这就是我目前的想法。
+
+我想从事人工智能方面的研究，不盲从新的流行的思想，也不排斥他们，这就是我的想法。任何能够让我离这个目标越来越近的方向，都是我心仪的研究方向。失败是难免的，终身失败也很常见。跨时代的发现三十年里只要有1个人就够了，我愿意当那个分母。我想读研、读博，当老师，年青就搞科研，如果哪一天我脑子顽固了就去给年轻人讲过去那些经典的课，我想这样度过我的一生。我依旧迷茫，且看不到出路。学术上看不到出路，在将来如何生存上也是。我希望在我读研的时间里能解决这些困惑。
+
+2)
+        如果上一条路无法实现的话，此处有一个B计划：
+寻找一个自动化相关的、流行的、公司招人多的、能赚钱的工作（码农、机器人制造）所需要的研究生学历的提供学校，求学且学好手艺，将来挣钱买房，养活父、母、妻、子。
