修改文件: 个人陈述.md

--- a/个人陈述.md
+++ b/个人陈述.md
@@ -9,12 +9,20 @@
 3)	省级：辽宁省电子设计竞赛，二等奖。
 4)	校级和院级比赛获奖过多且无意义，不列
 ### 其他
-1)	使用numpy和C++ eigen库实现的运筹学算法库封装：
-2)	使用STC产89C51单片机和python midi库实现的MIDI_PAD音效键盘实现：
-3)	使用Javascript和微信WX框架制作的“控制系统仿真实验云平台”：
+1)	使用numpy和C++ eigen库实现的运筹学算法(不完整)库[封装](https://github.com/liangzid/OperationResearch)：
+2)	使用STC产89C51单片机和python midi库实现的MIDI_PAD音效键盘[实现](https://github.com/liangzid/MIDI_learning)：
+3)	使用Javascript和微信WX框架制作的[“控制系统仿真实验云平台”](https://github.com/liangzid/Control/tree/master/ProcessingControl_WeChatProgramming)：
 ## 个人爱好
 1) 周易。
 2) 写小说，可见[此处](https://github.com/liangzid/Novel_Set)
+## 证明材料
+1）	论文[地址]()
+2）	专利受理[地址]()：
+3）	大创项目源代码[地址1](https://github.com/liangzid/FusionNeuralNetwork),[地址2](https://github.com/liangzid/CINW),[地址三](https://github.com/liangzid/AutoMonitoringSystem)：
+4）	竞赛证书材料[地址]()：
+5）	电子设计竞赛[源地址](https://github.com/liangzid/stm32)：
+
+
 ## 目前已经掌握的知识脉络
 目前已掌握的知识脉络：
 1．数学
