--- a/个人陈述.md
+++ b/个人陈述.md
@@ -16,10 +16,10 @@
 1) 周易。
 2) 写小说，可见[此处](https://github.com/liangzid/Novel_Set)
 ## 证明材料
-1）	论文[地址]()
-2）	专利受理[地址]()：
+1）	论文[地址](https://github.com/liangzid/-/blob/master/Person%20Re-identification%20Algorithm%20Based%20on%20the%20Fusion%20of%20Deep%20Feature%20and%20LOMO%20Feature.pdf)
+2）	专利受理[地址](https://github.com/liangzid/-/blob/master/%E4%B8%93%E5%88%A9%E5%8F%97%E7%90%86%E8%AF%B4%E6%98%8E.pdf)：
 3）	大创项目源代码[地址1](https://github.com/liangzid/FusionNeuralNetwork),[地址2](https://github.com/liangzid/CINW),[地址三](https://github.com/liangzid/AutoMonitoringSystem)：
-4）	竞赛证书材料[地址]()：
+4）	竞赛证书材料[地址](https://github.com/liangzid/-/blob/master/%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6%E4%B9%8B%E8%AF%81%E6%98%8E%E6%9D%90%E6%96%99.pdf)：
 5）	电子设计竞赛[源地址](https://github.com/liangzid/stm32)：
 
 
