修改文件: worklog/2019-12-9-log.md

--- a/worklog/2019-12-9-log.md
+++ b/worklog/2019-12-9-log.md
@@ -8,7 +8,7 @@ grammar_cjkRuby: true
 
 # 12.09 
 
-由于今天要讨论实验的设计,所以听张远鸣的看了[论文<Fast Generating A Large Number of Gumbel-Max Variables\>]()的实验部分,总结如下:
+由于今天要讨论实验的设计,所以听张远鸣的看了[论文<Fast Generating A Large Number of Gumbel-Max Variables\>](Not Found)的实验部分,总结如下:
 1. 实验要为task服务,
 2. 三要素是:dataset,baseline,以及metric
 3. 控制好变量多画一些图,一定要表现出自己的优势.
@@ -54,3 +54,4 @@ K取固定值256
 1. Xaxis: k in 2^(7,8,9,10)
 2. Yaxis:average time
 3. 曲线:对于最终n=bigNumber相同的情形,每次流入的数据的数据量为变量,画一张图
+### similarity search
