修改文件: worklog/2019-12-9-log.md

--- a/worklog/2019-12-9-log.md
+++ b/worklog/2019-12-9-log.md
@@ -55,3 +55,10 @@ K取固定值256
 2. Yaxis:average time
 3. 曲线:对于最终n=bigNumber相同的情形,每次流入的数据的数据量为变量,画一张图
 ### similarity search
+根据maxlog那篇论文上展示的,似乎可以将其放在真是数据集上跑,比如MUSHROOM和CONNECT两个.
+1. Xaxis:k, 2^(7,8,9,10)
+2. Yaxis:precision和recall
+希望这个可以把OPH类型比下去.
+
+在运行时间角度:
+类比maxlog的处理,设置(updateTime, estimate time)两种东西,在k或者n随横轴变化的角度下考虑.这个实验就不对比maxlogOPH
