修改文件: worklog/2019-12-9-log.md

--- a/worklog/2019-12-9-log.md
+++ b/worklog/2019-12-9-log.md
@@ -21,12 +21,6 @@ grammar_cjkRuby: true
 4. metric选取:算法平均时间,RMSE,MSE
 
 ## 在以上东西的基础上,目前构思画下面几组图:
-### 在similarity estimation验证算法efficiency
-这组图画4个,
-1. Xaxis: 选取sketch的大小k
-2. Yaxis:average time
-3. baseline:三个都跑,(或许可以去掉OPH???)
-4. 第四个变量:数据集的大小n (但是我们的这个是针对流式数据的,所以这里或许有一定的不合理之处)
 ### 在similarity estimation验证针对流式数据的efficiency
 这组图也画4个,每张图中
 1. Xaxis: n的变化.流式数据,n逐渐增大,可以是等量,也可以是指数 量...?
@@ -40,12 +34,12 @@ grammar_cjkRuby: true
 similarity estimation常用数据集:realsim,RCV1,webspam,libimseti,Last.fm
 
 每个选定的数据集画一张图,每张图中:
-1. Xaxis: n的变化.流式数据,n逐渐增大,可以是等量,也可以是指数 量...?
+1. Xaxis: n的变化.流式数据,n逐渐增大
 2. Yaxis:average time
 3. baseline:三个都跑,(或许可以去掉OPH???)
 K取固定值256
 ### 验证流式数据的准确度
-1. Xaxis: n的变化.流式数据,n逐渐增大,可以是等量,也可以是指数 量...?
+1. Xaxis: n的变化.流式数据,n逐渐增大
 2. Yaxis:RMSE
 3. baseline:三个
 这里的问题在于,随着n的增大,Similarity在不断的变化,因此真正的Jaccard相似度是硬算呢还是怎么?
@@ -54,11 +48,11 @@ K取固定值256
 1. Xaxis: k in 2^(7,8,9,10)
 2. Yaxis:average time
 3. 曲线:对于最终n=bigNumber相同的情形,每次流入的数据的数据量为变量,画一张图
-### similarity search
+### similarity search准确度
 根据maxlog那篇论文上展示的,似乎可以将其放在真是数据集上跑,比如MUSHROOM和CONNECT两个.
 1. Xaxis:k, 2^(7,8,9,10)
 2. Yaxis:precision和recall
 希望这个可以把OPH类型比下去.
 
-在运行时间角度:
+### similarity search在运行时间角度:
 类比maxlog的处理,设置(updateTime, estimate time)两种东西,在k或者n随横轴变化的角度下考虑.这个实验就不对比maxlogOPH
