修改文件: worklog/2019-12-11-log.md

--- a/worklog/2019-12-11-log.md
+++ b/worklog/2019-12-11-log.md
@@ -12,5 +12,5 @@ grammar_cjkRuby: true
 
 除此之外,面临的另外一个问题是:算法速度太慢!
 
-和张学长讨论一下,大家分别优化之,张学长采用的方式是用字典来代替列表操作,字典中找到删除的元素的时间复杂度比从列表中去找寻要低.我采取的方法是:改V的删除操作为记录下一轮循环所需要的没有被删除的V,这样的效果也是很好的,只不过会和V的大小相关.目前我的算法比学长的要慢一些,不知道是不是因为我是用面向对象封装的原因,明天的任务就是优化它了.
+和张学长讨论一下,大家分别优化之,最后的解决方式是用字典来代替列表操作,字典中找到删除的元素的时间复杂度比从列表中去找寻要低.目前我的算法比学长的要慢一些,不知道是不是因为我是用面向对象封装的原因,明天的任务就是优化它了．无论如何，现在的FastMaxlog在速度上终于比OPH稍稍快一点了.
 
