修改文件: worklog/2019-12-19-log.md

--- a/worklog/2019-12-19-log.md
+++ b/worklog/2019-12-19-log.md
@@ -12,6 +12,6 @@ grammar_cjkRuby: true
 * 把上次周日讨论的几篇论文整理归纳,主要是**掌握该领域经典算法的知识,能够成功总结出他们的研究思路,然后用英文表述出来.提出自己觉得能改进的点,并大致给出一个方法,用以实现.** 同时我觉得自己很有必要新建一个存储idea的文件夹,把自己想出来的可行的idea都存储进去,等到积攒够了一定量去和王老师讨论.
 * 计划把王老师论文中的GCN的东西学习一下.以前瞧不起神经网络,但是固步自封却没有意识到这东西现在又发展了这么多.从效果和热度的角度,还是要学习他的.一切以发论文为准吧!前些天看王老师发消息说GCN+NAS是灌水套路,但是为什么我到现在都不知道,这就是知识不够的原因,所以下面取学习一下很有必要!这一部分需要学习的论文主要有:**王老师的调研报告,张朔学长发的两篇survay,周日讨论论文里相关的.**
 * NLP的论文.这个是张老师给的任务,我也要认真看一下.正好组里许诺学长和张朔学长也在做相关工作,兰学长也讲了比较经典的attention,讨论的也很热烈,这个方面目前准备了解经典的那些东西,水不水这个领域的论文就是后话了.
-* NIPS2019的论文,计划从[这个会议笔记](https://david-abel.github.io/notes/neurips_2019.pdf)开始看和[这些视频录像](开始).
+* NIPS2019的论文,计划从[这个会议笔记](https://david-abel.github.io/notes/neurips_2019.pdf)开始看和[这些视频录像](https://slideslive.com/neurips)开始.
 * 近期要学习一下怎么看顶会怎么从arxiv上淘论文了!王老师给出的重要会议有:**KDD, icml, www, nips.**
 以我目前不够成熟的眼光看,我反正是不想做sketch了,做图,NLP我都能接受,不过还是这些方向都了解差不多了再和王老师讨论吧.
