修改文件: worklog/2019-12-23-log.md

--- a/worklog/2019-12-23-log.md
+++ b/worklog/2019-12-23-log.md
@@ -20,5 +20,24 @@ grammar_cjkRuby: true
 下面是针对王老师的一些问题的个人思考.张学长肯定会思考这个问题的,我到时候只需要认真倾听就好了.此处就写下自己的思考吧!
 
 为什么OPH的precision是0, recall是1?
-因为OPH search到的集合非常多,虽然囊括了所有的真实集合,但是也有更多的虚假集合.那么,接下来的问题是:为什么OPH会找错这么多?因为OPH只进行1次hash,而如果集合i里面元素的个数n_i远远小于k,那么大多数OPH生成的sketch就是空的,也就是初始值.所以OPH觉得所有的集合都和他的query.
 
+因为OPH search到的集合非常多,虽然囊括了所有的真实集合,但是也有更多的虚假集合.那么,接下来的问题是:为什么OPH会找错这么多?因为OPH只进行1次hash,而如果集合i里面元素的个数n_i远远小于k,那么大多数OPH生成的sketch就是空的,也就是初始值.所以OPH觉得所有的集合都和他的query很相似.
+
+为什么在recall里面,dens过的OPH算法的曲线会随着c的增大而下降呢?
+
+LSH算法中,c是建立的hash table的个数,按道理讲随着c的增大结果应该是越来越好的,也就是正相关.但是,在实际使用LSH时,并不是建立c个长度为b的sketch,而是将长度k的sketch分成c份,每份的长度为b.这就是问题所在.由于数据集的问题,很多集合的大小n非常小,即n小于k,所以OPH表现不好,这时候随着k的增大,sketch的效果会变差,因为同样的n需要发散出更长的sketch了.所以解决方案就是:sketch短一点,多生成几次.
+
+为什么task2里面的时间图和task1里面的时间图如此不同?
+* task2的时间是平均的query time,是在生成了sketch并利用sketch得到了LSH table之后,利用这个table去query找到candidate然后估算jaccard是否满足阈值的时间,简单说就是查表+验证的时间.当然,是取了数据集中所有集合当作query集合之后算得的算法平均值.
+* task1的时间是生成sketch+检验相似度的时间,是生成两个集合的sketch,之后用这两个sketch估测jaccardindex的时间.所以二者区别很大.
+* 在生成sketch上,fastMaxlog比OPH稍慢一点点,hyperMinhash的速度和OPH相当,maxlogHash和minhash很慢,他们速度相当;但是在query的时候,minhash,OPH最快,Maxlog系列的其次,hyper的最慢.
+* query得到的candidate集合大小是task2的时间需要考虑的问题.
+
+由于现在学长不需要我做实验了,我这段时间就好好阅读综述吧.早点把综述看完,早点入门也是好的.这段时间写代码跑实验意识到了很多问题,学长也给了很多建议,此处很有必要总结一下,日后如果我带学弟或许也会把这些经验讲给他吧
+1. 写伪代码的实现一定要完完全全按照伪代码的逻辑,除非特殊的数据机构或者难以实现的地方.这点是张朔学长提的.因为算法的实现就是为了印证算法,通过100%的还原可以确定实现的正确性,或者说排查伪代码的错误.这样代码开源出去也可以让看代码的人不产生质疑.
+2. 写大型程序的代码,一定要进行多个小模块的测试.争取每写完一个函数就进行一下测试,这样虽然写的很慢,但是可以大大减小bug的产生.
+3. 一定要写好接,这个是学长的反面教材.代码是需要重用的,最好封装好,不要在主函数里面定义某个变量,在那个文件下的某个函数里面直接用,不知道的人真不知道这个函数来自哪里,这个问题太要命了,我反正很烦这么写.
+
+就这样吧,还是要多问别人多请教别人.读本科时编程能力比周围人强很多,所以通过周围同学得到的反馈就很少,现在到了新环境遇到这么多比我厉害的学长是好事,要多多加油!谁接受批评都下意识排斥,但是越是这样越要主动接受,不断批评和自我批评,加油梁子!
+
+今天李润东学长也把他阅读论文和查找论文的一些习惯讲给了我,我也要好好搞啊!
