修改文件: 2021-01-31/对比学习笔记.md

--- a/2021-01-31/对比学习笔记.md
+++ b/2021-01-31/对比学习笔记.md
@@ -1,3 +1,5 @@
 > name: liangzid mail:2273067585@qq.com
 # 对比学习在NLP下的应用
 最近几天看了一些和对比学习相关的论文，现整理如下：
+## 基本概念
+对比学习（contrastive learning）是被看作是一种自监督学习方法（SSL，Self-supervised Learning），本质上是为了在数据标签的设定下为数据学习到一个良好的表示。因此，对比学习本质上仍然可以看做是一种表示学习。
