修改文件: 2021-01-31/对比学习笔记.md

--- a/2021-01-31/对比学习笔记.md
+++ b/2021-01-31/对比学习笔记.md
@@ -14,3 +14,5 @@
 | NLP | Hinton组 | DeCLUTR: Deep Contrastive Learning for Unsupervised Textual Representations |
 | NLP | Liuzhiyuan组 | DeepChannel: Salience Estimation by Contrastive Learning for Extractive Document Summarization |
 | NLP |  | CERT: Contrastive Self-supervised Learning for Language Understanding |	
+
+其中，最著名的对比学习方法是simCLR和MOCO两类。现在将对二者进行
