修改文件: 2021-01-31/对比学习笔记.md

--- a/2021-01-31/对比学习笔记.md
+++ b/2021-01-31/对比学习笔记.md
@@ -1,7 +1,7 @@
 > name: liangzid mail:2273067585@qq.com
 # 对比学习在NLP下的应用
 最近几天看了一些和对比学习相关的论文，现整理如下：
-## 基本概念
+## -1. 基本概念
 对比学习（contrastive learning）是被看作是一种自监督学习方法（SSL，Self-supervised Learning），本质上是为了在数据标签的设定下为数据学习到一个良好的表示。因此，对比学习本质上仍然可以看做是一种表示（representation）学习。
 下表简单列举了各个领域比较经典的对比学习算法。
 
@@ -15,4 +15,18 @@
 | NLP | Liuzhiyuan组 | DeepChannel: Salience Estimation by Contrastive Learning for Extractive Document Summarization |
 | NLP |  | CERT: Contrastive Self-supervised Learning for Language Understanding |	
 
-其中，最著名的对比学习方法是simCLR和MOCO两类。现在将对二者进行
+其中，最著名的对比学习方法是CV领域的simCLR和MOCO。除此之外，也有将对比学习迁移至NLP的一些工作，当然由于Contrastive Learning的根本目的仍然在于提取表示，所以这一类的方法主要是在NLU上进行的。当然，上表中也整理了另外的一些工作，比如，针对于对比学习的“自监督学习”的特性，将Contrastive learning应用在异常检测等领域的工作。除此之外，一些比较特殊的、进行理论纯分析的工作也被展示了出来。现对这些工作进行一一介绍。
+## 0. 基本特点和基本框架
+还是要再罗嗦几句。
+在介绍真正的contrastive learning的工作之前，十分有必要再强调一下其基本特点。怎么样看一篇工作是不是使用了对比学习的方法？是因为论文的题目取了这个名字吗？是因为他也是一种自监督学习方法吗？不是的。通常而言，对比学习包括以下几个明显的步骤：
+1. data augmentation.
+2. representation extraction.
+3. projection.
+4. similarity  based loss with temperature.
+其中，最重要的是第一步（数据增强）和第三步（projection）。至于第四步的损失函数，如果你把log公式打开，你会发现他和常见的metric learning是具有很大的共通之处的，和其他的一些triple loss也说不出太大的区别。但是，通过增强的方式去构造不同的变体，之后再使用projection（一般是MLP）对提取得到的表示进行映射，这是典型的contrastive learning的思想。
+
+这样说存在一定的片面性，且对不了解之的读者不友好。下面通过几个例子复述上一过程。
+
+## 1. simCLR：一个简单的使用强化学习去学到一个表示提取器的方法
+![simCLR的表示提取方式](./images/1612075650122.png)
+上图是对比学习里的经典图示，这张图的经典之处在于它不仅确定了对比学习的经典范式，也把整个道理讲得十分清楚。
