修改文件: 2021-01-31/对比学习笔记.md

--- a/2021-01-31/对比学习笔记.md
+++ b/2021-01-31/对比学习笔记.md
@@ -30,3 +30,19 @@
 ## 1. simCLR：一个简单的使用强化学习去学到一个表示提取器的方法
 ![simCLR的表示提取方式](./images/1612075650122.png)
 上图是对比学习里的经典图示，这张图的经典之处在于它不仅确定了对比学习的经典范式，也把整个道理讲得十分清楚。
+上图所讲的过程用文字表达为：
+0. 对于一个样本x，定义对这类样本所进行的所有增强方法（CV领域如滤波、剪切、旋转等等）族T；
+1. 随机从族T中抽取两种增强方法t1和t2，并施加在样本x上，获得增强后的样本（也就是变体）xi，xj。
+2. 使用特征提取器f()提取两个变体的特征（表示）；
+3. 使用g()分别对两表示做映射；
+4. 构造一个损失函数，使得两表示映射后的表达相似度尽可能高。
+当然，这里面存在着一些细节，比如：
+1. 特征提取的f,两边是不是同一个？参数更新的时候，如何对他们进行更新呢？
+2. 设计损失函数的细节？
+但是，单单从上面的这张图里，我们就已经把这个模型吃的差不多了。还是先看一下直观的数据增强吧。
+![augmentation](./images/1612076814004.png)
+没什么好讲的，贴了这张图应该就，，懂的都懂了。
+下面再看看关于损失函数的形式。
+![损失函数](./images/1612077055891.png)
+这个损失函数前面有一个负号，所以其实是最大化后面的对数损失。这个损失的形式本质上是一个softmax的形式，所以表达的就是：当前的这一对数据增强之后的相似度，在整体的各个相似度计算中所占的比例。这个比例按照损失函数的需求是越大越好，也就代表了要相同的样本出来的变体尽可能的相似，而不同的样本出来的不同变体之间的差距尽可能的大。关于分母：分母是一个简写的形式，一般而言，分母一共是2N，相当于一个batch里有N个样本，然后每个样本有两种增强之后的变体（这个是图中展现出来的）。
+## 2. Moco：Momentum Contrastive Learning
