修改文件: 2021-01-31/对比学习笔记.md

--- a/2021-01-31/对比学习笔记.md
+++ b/2021-01-31/对比学习笔记.md
@@ -1,5 +1,5 @@
 > name: liangzid mail:2273067585@qq.com
-# 对比学习在NLP下的应用
+# 对比学习的浅显总结及其在NLP下的应用
 最近几天看了一些和对比学习相关的论文，现整理如下：
 ## -1. 基本概念
 对比学习（contrastive learning）是被看作是一种自监督学习方法（SSL，Self-supervised Learning），本质上是为了在数据标签的设定下为数据学习到一个良好的表示。因此，对比学习本质上仍然可以看做是一种表示（representation）学习。
@@ -46,3 +46,26 @@
 ![损失函数](./images/1612077055891.png)
 这个损失函数前面有一个负号，所以其实是最大化后面的对数损失。这个损失的形式本质上是一个softmax的形式，所以表达的就是：当前的这一对数据增强之后的相似度，在整体的各个相似度计算中所占的比例。这个比例按照损失函数的需求是越大越好，也就代表了要相同的样本出来的变体尽可能的相似，而不同的样本出来的不同变体之间的差距尽可能的大。关于分母：分母是一个简写的形式，一般而言，分母一共是2N，相当于一个batch里有N个样本，然后每个样本有两种增强之后的变体（这个是图中展现出来的）。
 ## 2. Moco：Momentum Contrastive Learning
+这篇是有何凯明大神参与的工作，来自FacebookAI，论文只有三页。这篇论文也是CV领域的，这篇论文是对上一篇论文的更新，解决的主要是SimCLR的低效性。simCLR的低效性主要来自于：
+1. simCLR需要较大的batch才能维持负样本的全分布，也就是说，只有N较大时，这种无监督学习方法才能有效。这一点比较容易理解，可以同与信息上类似的角度进行理解；
+2. simCLR结构本质上包含了两个不存在强耦合的encoder，一般最后使用的时候只会只用其中一个。如何对这个encoder进行更新，也是需要进行考虑的。
+
+也就是针对这两个问题，Moco采用了简单而高效的策略进行调整。
+1. 对N和batch的大小进行解耦：维持一个queue（长度为N），损失函数里的全样本从“一个batch里的所有样本”变为“queue中的所有样本”；
+2. 对两个encoder进行关联：使用momentum的方式更新encoder
+
+具体而言就是：
+### queue
+queue就是队列，也就是使用这样的数据结构。队列的长度为N。每到来一个新样本，即加入队列，然后先入先出维持总量为N。这样即使使用一个较小的batch，也可以获得较大的N用以计算损失
+### momentum updating
+负样本的encoder总是比对照组在更新上慢一拍。
+
+如下图如所示：
+![enter description here](./images/1613789091208.png)
+
+从图中可以看出，momentum encoder并没有完全仿照encoder，而是还顺带包含一些“过去的成分”，用公式来表达：
+![enter description here](./images/1613789205743.png)
+
+## 3. 对比学习在NLP中的应用
+
+主要在NLU上，毕竟NLU的使用思路和表示学习也是一样的。
